@@ -1,0 +1,58 @@
+@import "../shared/variables";
+
+.message {
+  border: 1px solid #{map-val($colors, '--q-color-gray--lighter')};
+  border-radius: 8px;
+  box-shadow: 0 24px 30px -24px #{map-val($colors, '--q-color-gray--normal')}, 0 0 30px 0 #{map-val($colors, '--q-color-gray--lighter')};
+  display: flex;
+  flex-direction: row;
+  font-family: map-val($typography, '--q-font-family');
+  padding: 16px;
+  transition: visibility 0s linear .2s, opacity .2s linear;
+  visibility: visible;
+  opacity: 1;
+
+  &.closing {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .icon {
+    align-items: center;
+    display: inline-flex;
+    height: 20px;
+    margin-right: 12px;
+    width: 20px;
+    margin-top: 2px;
+  }
+
+  .success {
+    fill: #{map-val($colors, '--q-color-success--normal')};
+  }
+
+  .danger {
+    fill: #{map-val($colors, '--q-color-danger--normal')};
+  }
+
+  .info {
+    fill: #{map-val($colors, '--q-color-primary--normal')};
+  }
+
+  .text {
+    flex: 1;
+  }
+
+  .close {
+    cursor: pointer;
+    display: inline-block;
+    height: 24px;
+    fill: #{map-val($colors, '--q-color-gray--darker')};
+    margin-left: 12px;
+    width: 24px;
+    transition: .2s;
+
+    &:hover {
+      fill: #{map-val($colors, '--q-color-blackish--normal')};
+    }
+  }
+}
