@@ -1,0 +1,1 @@
+export type state = 'init' | 'running' | 'destroyed'
