@@ -1,0 +1,1 @@
+export type type = 'info' | 'success' | 'danger'
